framework/css/xslt-conref.css
@namespace oxy "http://www.oxygenxml.com/extensions/author";

/* Hides the required content that is just needed for display on 
 xslt-conref for topic, ol/li, ul/li, table */
*[class~="topic/topic"][xslt-conref]:not([conaction]) > *[class~="topic/topic"],
*[class~="topic/table"][xslt-conref]:not([conaction]) > *[class~="topic/table"],
*[class~="topic/ol"][xslt-conref]:not([conaction]) > *[class~="topic/ol"],
*[class~="topic/ul"][xslt-conref]:not([conaction]) > *[class~="topic/ul"],
*[class~="topic/dl"][xslt-conref]:not([conaction]) > *[class~="topic/dl"],
*[class~="topic/prodinfo"][xslt-conref]:not([conaction]) > *[class~="topic/prodinfo"],
*[class~="topic/ph"][xslt-conref]:not([conaction]) > *[class~="topic/ph"],
*[class~="topic/dlentry"][xslt-conref]:not([conaction]) > *[class~="topic/dlentry"]
{
    display : inherit;
}

*[class~="topic/simpletable"][xslt-conref]:not([conaction]) > *[class~="topic/simpletable"]
{
    display : table;
}

*[class~="topic/table"][xslt-conref]:not([conaction]) > *,    
*[class~="topic/simpletable"][xslt-conref]:not([conaction]) > *,
*[class~="topic/ol"][xslt-conref]:not([conaction]) > *,
*[class~="topic/ul"][xslt-conref]:not([conaction]) > *, 
*[class~="topic/topic"][xslt-conref]:not([conaction]) > *,
*[class~="topic/dl"][xslt-conref]:not([conaction]) > *,
*[class~="topic/prodinfo"][xslt-conref]:not([conaction]) > *,
*[class~="topic/ph"][xslt-conref]:not([conaction]) > *,
*[class~="topic/dlentry"][xslt-conref]:not([conaction]) > *
{
    display : none;
}


/* Modify Header before xslt-conref  */
*[xslt-conref] > oxy|error:before,
*[xslt-conref] > oxy|reference:before {
    background-color: rgb(240, 240, 240) !important;
	display: -oxy-morph !important;
  	content: 
  		oxy_button(
			action, oxy_action(
		            name, 			'Open Script', 
		            description, 	'Open XSLT-Conref XSL Script file', 
		            icon, 			url('../img/openScript.png'), 
		            operation, 		'org.DitaSemia.XsltConref.OpenXsltConrefFile'
		            arg-filetype,	'script'),
			transparent, 				true,
			showIcon, 					true,
			enableInReadOnlyContext, 	true)
  		oxy_button(
  			action, oxy_action(
		            name, 			'Refresh', 
		            description, 	'Refresh the XSLT-Conref', 
		            icon, 			url('../img/refreshReference.png'), 
		            operation, 		'org.DitaSemia.XsltConref.RefreshReference'),
			transparent, 				true,
			showIcon, 					true,
			enableInReadOnlyContext, 	true)
  		!important;
}

*[xslt-conref][xslt-conref-source] > oxy|error:before,
*[xslt-conref][xslt-conref-source] > oxy|reference:before {
  	content: 
  		oxy_button(
  			action, oxy_action(
		            name, 			'Open Script', 
		            description, 	'Open XSLT-Conref XSL Script file', 
		            icon, 			url('../img/openScript.png'), 
		            operation, 		'org.DitaSemia.XsltConref.OpenXsltConrefFile'
		            arg-filetype,	'script'),
			transparent, 				true,
			showIcon, 					true,
			enableInReadOnlyContext, 	true)
  		oxy_button(
  			action, oxy_action(
		            name, 			'Open Source', 
		            description, 	'Open XSLT-Conref XML Source file', 
		            icon, 			url('../img/openSource.png'), 
		            operation, 		'org.DitaSemia.XsltConref.OpenXsltConrefFile'
		            arg-filetype,	'source'),
			transparent, 				true,
			showIcon, 					true,
			enableInReadOnlyContext, 	true)
  		oxy_button(
  			action, oxy_action(
		            name, 			'Refresh', 
		            description, 	'Refresh the XSLT-Conref', 
		            icon, 			url('../img/refreshReference.png'), 
		            operation, 		'org.DitaSemia.XsltConref.RefreshReference'),
			transparent, 				true,
			showIcon, 					true,
			enableInReadOnlyContext, 	true)
  		!important; 
}

*[xslt-conref] > oxy|error:before,
*[xslt-conref][xslt-conref-source] > oxy|error:before{
	-oxy-append-content: "[" !important;
}

*[xslt-conref] no-content {
	/* Mark content to be invisible in output */
	font-size: 	0.8em;
	color:		#999999;
}

/* Remove static text, no margins */
*[xslt-conref]:not([conaction]):before {
    content:	"";
    display:	inline;
    margin:		0px;
}

*[class~="topic/table"][xslt-conref]:not([conaction])
*[class~="topic/simpletable"][xslt-conref]:not([conaction]){
    display : block;
}

*[class~="topic/row"][xslt-conref] {
  	content: "" !important;
}

